feat(auth): add local users and simple permission schema
